--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /ServerRecargasIJ/*.pyc
 /RecargasServer/venv
+/JavaApplication1/nbproject/private/
+/JavaApplication1/build/
+/JavaApplication1/dist/
+/Dart/.pub
+/Dart/pubspec.lock
